# ai-ppo

./: CONTINUOUS_TRAINING_GUIDE.md  GPU_OPTIMIZATION_GUIDE.md  HIGH_PERFORMANCE_TRAINING_STRATEGY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  STATUS_REPORT.md  btc_training_config.yaml  debug_config.py  demo.py  fix_streamlit_comprehensive.py  fix_streamlit_deprecation.py  fix_summary.md  fix_unicode.py  gpu_test.py  install_gpu_pytorch.bat  live_data_patch.py  quick_start.bat  requirements.txt  run_ai_ppo.bat  setup_windows.bat  stop_training.txt  temp_gui_config.yaml  temp_test_config.yaml  test_binance_interval.py  test_binance_simple.py  test_crypto_data.py  test_debug.py  test_deprecation_fix.py  test_enhanced_training.py  test_gui_imports.py  test_imports.py  test_live_data.py  test_portfolio.py  test_training_crash.py  train_enhanced.py  train_simple.bat  verify_system.py
config/: alpaca_config.yaml  config_template.yaml  crypto_config.yaml  high_performance_config.yaml
gui/: .gui_session_active  (+3 more)
logs/: .gitignore  README.md  pyproject.toml  pyrightconfig.json  setup.py  start_gui.bat  temp_gui_config.yaml  test_bug_fixes.py  test_training.py  train_easy.py  train_enhanced.py
logs/config/: config_template.yaml  crypto_config.yaml  high_performance_config.yaml  thread_test_config.yaml
logs/gui/: README.md  test_gui_path.py
logs/src/: __init__.py
logs/src/agents/: __init__.py
logs/src/data/: __init__.py  preprocessing.py
logs/src/evaluation/: backtesting.py
logs/src/utils/: helpers.py  training_manager.py
logs/src/visualization/: __init__.py
(+18 files in other folders)
