[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ppo"
version = "1.0.0"
description = "AI PPO Trading Bot"
authors = [{name = "MasstarVT"}]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.0.0",
    "yfinance>=0.2.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "ta-lib>=0.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "colorlog>=6.7.0",
    "psutil>=5.9.0",
    "streamlit-option-menu>=0.3.6",
    "streamlit-aggrid>=0.3.4",
    "tensorboard>=2.13.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]